Update .gitignore to include additional local and IDE-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+*.local
+.idea/
+.vscode/
+*.swp
+*.swo
+*.bak
+*.orig
+*.DS_Store
+*.log
