--- a/package.json
+++ b/package.json
@@ -13,32 +13,8 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^6.0.1",
-    "prisma": "^6.0.1",
-    "redis": "^4.7.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "stripe": "^17.2.0",
-    "nodemailer": "^6.9.8",
-    "@sendgrid/mail": "^8.1.4",
-    "firebase-admin": "^12.7.0",
-    "socket.io": "^4.8.1",
-    "bullmq": "^5.8.0",
-    "ioredis": "^5.4.1",
-    "zod": "^3.23.8",
-    "jose": "^5.2.3",
-    "uuid": "^10.0.0",
-    "date-fns": "^4.1.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/nodemailer": "^6.4.16",
-    "@types/uuid": "^10.0.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2",
-    "lucide-react": "^0.451.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -47,21 +23,47 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
-    "@hookform/resolvers": "^3.3.4",
+    "@sendgrid/mail": "^8.1.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.16",
+    "@types/uuid": "^10.0.0",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.8.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "firebase-admin": "^12.7.0",
+    "ioredis": "^5.4.1",
+    "jose": "^5.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.451.0",
+    "nanoid": "^5.1.6",
+    "next": "16.0.1",
+    "nodemailer": "^6.9.8",
+    "prisma": "^6.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.53.1",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.12.7",
+    "redis": "^4.7.0",
     "remark-gfm": "^4.0.0",
-    "recharts": "^2.12.7"
+    "socket.io": "^4.8.1",
+    "stripe": "^17.2.0",
+    "tailwind-merge": "^2.5.2",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "tsx": "^4.19.2"
+    "tailwindcss": "^4",
+    "tsx": "^4.19.2",
+    "typescript": "^5"
   }
 }
