--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "recharts": "^2.12.7",
     "redis": "^4.7.0",
     "remark-gfm": "^4.0.0",
+    "resend": "^6.4.2",
     "socket.io": "^4.8.1",
     "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.2",
