--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ioredis": "^5.4.1",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
+    "next-auth": "^4.24.13",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "lucide-react": "^0.451.0",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
