--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.8.0",
     "class-variance-authority": "^0.7.1",
@@ -38,17 +40,16 @@
     "ioredis": "^5.4.1",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
-    "next-auth": "^4.24.13",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "lucide-react": "^0.451.0",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "nodemailer": "^6.9.8",
     "prisma": "^6.0.1",
     "react": "19.2.0",
+    "react-day-picker": "^9.0.8",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.53.1",
-    "react-day-picker": "^9.0.8",
     "react-markdown": "^9.0.1",
     "recharts": "^2.12.7",
     "redis": "^4.7.0",
@@ -58,6 +59,7 @@
     "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.2",
     "uuid": "^10.0.0",
+    "ws": "^8.18.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
