--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "@uiw/react-md-editor": "^4.0.8",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.8.0",
     "class-variance-authority": "^0.7.1",
